force-app/main/default/objects/Publish_PriceBook__c/Publish_PriceBook__c.object-meta.xml
<CustomObject>
    <description>Custom object to publish Price Book data via outbound messaging to external systems
Object Type: IA
Integrated: Y</description>
    <label>Publish PriceBook</label>
    <nameField>
        <label>Publish PriceBook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publish PriceBooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>