force-app/main/default/objects/Publish_PriceBook__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Formula Field to return the Account Name in which a Program&apos;s Price Book is associated with.  Used in outbound messaging.
Field Type: IA
Integrated: Y</description>
    <formula>Program__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field to return the Account Name in which a Program&apos;s Price Book is associated with.  Used in outbound messaging.</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>