force-app/main/default/objects/Publish_PriceBook__c/fields/Active_PriceBook__c.field-meta.xml
<CustomField>
    <fullName>Active_PriceBook__c</fullName>
    <description>Formula Field to return the status (Active / Inactive) of a Program&apos;s Price Book. Used in outbound messaging. 
Field Type: IA
Integrated: Y</description>
    <formula>Program__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field to return the status (Active / Inactive) of a Program&apos;s Price Book. Used in outbound messaging.</inlineHelpText>
    <label>Active PriceBook</label>
    <type>Checkbox</type>
</CustomField>