force-app/main/default/objects/Publish_PriceBook__c/fields/Historic_Price_Book_Number__c.field-meta.xml
<CustomField>
    <fullName>Historic_Price_Book_Number__c</fullName>
    <description>Capture historic Auto Number field to generate from unique Price Book ID used for correlation with external systems downstream. Product integration should leave this field null as an insert will create the value.</description>
    <formula>Price_Book__r.Price_Book_ID__c</formula>
    <inlineHelpText>Capture historic Auto Number field to generate from unique Price Book ID used for correlation with external systems downstream. Product integration should leave this field null as an insert will create the value.</inlineHelpText>
    <label>Historic Price Book Number</label>
    <type>Text</type>
</CustomField>