force-app/main/default/objects/Publish_PriceBook__c/fields/Historic_Pricebook_ID__c.field-meta.xml
<CustomField>
    <fullName>Historic_Pricebook_ID__c</fullName>
    <description>This contains the historic PB ID to be transposed for existing PPB records to reduce outbound changes.</description>
    <inlineHelpText>This contains the historic PB ID to be transposed for existing PPB records to reduce outbound changes.</inlineHelpText>
    <label>Historic Pricebook ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>