force-app/main/default/objects/Publish_PriceBook__c/fields/Historic_Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Historic_Program_ID__c</fullName>
    <description>Captures historic Pricebook Program ID for reference</description>
    <formula>Price_Book__r.Program__r.Program_Safe_ID__c</formula>
    <inlineHelpText>Captures historic Pricebook Program ID for reference</inlineHelpText>
    <label>Historic Program ID</label>
    <type>Text</type>
</CustomField>