force-app/main/default/objects/Publish_PriceBook__c/fields/Is_PriceBook_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_PriceBook_Active__c</fullName>
    <description>Indicates if related Pricebook is active</description>
    <formula>Price_Book__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if related Pricebook is active</inlineHelpText>
    <label>Is PriceBook  Active</label>
    <type>Checkbox</type>
</CustomField>