force-app/main/default/objects/Publish_PriceBook__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify if the Publish Pricebook is Active</description>
    <inlineHelpText>Identify if the Publish Pricebook is Active</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>