force-app/main/default/objects/Publish_PriceBook__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Price Book object.  Associates a Price Book (standard object) with Publish PriceBook (custom object).  Used in outbound messaging.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Lookup to the Price Book object.  Associates a Price Book (standard object) with Publish PriceBook (custom object).  Used in outbound messaging.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Publish PriceBooks</relationshipLabel>
    <relationshipName>Publish_PriceBooks</relationshipName>
    <type>Lookup</type>
</CustomField>