force-app/main/default/objects/Publish_PriceBook__c/fields/Price_Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_ID__c</fullName>
    <description>Formula field which returns the ID from a Price Book (standard object).  Used in outbound messaging.
Field Type: IA
Integrated: Y</description>
    <formula>IF( Historic_Pricebook_ID__c != NULL, Historic_Pricebook_ID__c, CASESAFEID(Id))</formula>
    <inlineHelpText>Formula field which returns the ID from a Price Book (standard object)  Used in outbound messaging.</inlineHelpText>
    <label>Price Book ID</label>
    <type>Text</type>
</CustomField>