force-app/main/default/objects/Publish_PriceBook__c/fields/Price_Book_Number__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Number__c</fullName>
    <description>Auto Number field to generate a unique Price Book ID used for correlation with external systems downstream. Product integration should leave this field null as an insert will create the value.</description>
    <displayFormat>PL-{000000}</displayFormat>
    <inlineHelpText>Auto Number field to generate a unique Price Book ID used for correlation with external systems downstream. Product integration should leave this field null as an insert will create the value.</inlineHelpText>
    <label>Price Book Number</label>
    <type>AutoNumber</type>
</CustomField>