force-app/main/default/objects/Publish_PriceBook__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This links the Publish Pricebook record directly to the Program</description>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Publish PriceBooks</relationshipLabel>
    <relationshipName>Publish_PriceBooks</relationshipName>
    <type>Lookup</type>
</CustomField>