force-app/main/default/objects/Publish_PriceBook__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>Formula field which returns the Program Name (Program Custom Object) in which a Price Book (standard object) is associated with.  Used in outbound messaging.
Field Type: IA
Integrated: Y</description>
    <formula>Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field which returns the Program Name (Program Custom Object) in which a Price Book (standard object) is associated with.  Used in outbound messaging.</inlineHelpText>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>