force-app/main/default/objects/Publish_PriceBook__c/fields/Publish_PPBE__c.field-meta.xml
<CustomField>
    <fullName>Publish_PPBE__c</fullName>
    <description>This button will only appear when the Program and PPB are successfully Published. This will update the related Active PPBE records that are either Waiting or Deactivated.</description>
    <formula>IF(AND(ISPICKVAL(Publish_Status__c,&quot;Published&quot;), ISPICKVAL(Program__r.Publish_Status__c,&quot;Published&quot;)), HYPERLINK(&apos;/apex/RWS_ppbButtonPage?id=&apos; &amp; Id , IMAGE(&apos;/resource/1488377428000/PublishPricebook&apos;, &apos;Publish Pricebook&apos;), &apos;_self&apos;), &apos;&apos;)</formula>
    <inlineHelpText>This button will only appear when the Program and PPB are successfully Published. This will update the related Active PPBE records that are either Waiting or Deactivated.</inlineHelpText>
    <label>&lt;span/&gt;</label>
    <type>Text</type>
</CustomField>