force-app/main/default/objects/Publish_PriceBook__c/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <description>The Published Date of the outbound message.  Updated by workflow field update, when outbound message is triggered.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The Published Date of the outbound message.  Updated by workflow field update, when outbound message is triggered.</inlineHelpText>
    <label>Published Date</label>
    <type>DateTime</type>
</CustomField>